--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,3 +32,7 @@ android {
         disable 'InvalidPackage'
     }
 }
+
+dependencies {
+    implementation  'com.android.support:appcompat-v7:27.1.1'
+}
