--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,7 +22,7 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 16
@@ -34,5 +34,5 @@ android {
 }
 
 dependencies {
-    implementation  'com.android.support:appcompat-v7:27.1.1'
+    implementation  'androidx.appcompat:appcompat:1.0.2'
 }
