--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@ build/
 ios/.generated/
 packages
 pubspec.lock
+android/.classpath
+android/.classpath
+android/.project
+android/.settings/org.eclipse.buildship.core.prefs
+example/android/.project
+example/android/.settings/org.eclipse.buildship.core.prefs
+example/android/app/.classpath
+example/android/app/.project
+example/android/app/.settings/org.eclipse.buildship.core.prefs
