--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,4 +35,5 @@ android {
 
 dependencies {
     implementation  'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:support-compat:27.1.1'
 }
