--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,3 +32,6 @@ android {
         disable 'InvalidPackage'
     }
 }
+dependencies {
+//    implementation fileTree(dir: 'libs', include: ['*.jar'])
+}
