--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,5 +40,5 @@ android {
 }
 dependencies {
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:support-compat:28.0.0'
+    implementation 'androidx.core:core:1.0.2'
 }
