--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,16 @@
-group 'io.github.ponnamkarthik.toast.fluttertoast'
+group 'com.example.FlutterToast'
 version '1.0-SNAPSHOT'
 
 buildscript {
+    ext.kotlin_version = '1.3.50'
     repositories {
         google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -17,28 +19,26 @@ rootProject.allprojects {
         google()
         jcenter()
     }
-
-    // gradle.projectsEvaluated {
-    //     tasks.withType(JavaCompile) {
-    //         options.compilerArgs << "-Xlint:deprecation"
-    //     }
-    // }  
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 28
 
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
     defaultConfig {
         minSdkVersion 16
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     lintOptions {
         disable 'InvalidPackage'
     }
 }
+
 dependencies {
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    implementation 'androidx.core:core:1.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
