fix pubspec web pluginClass Name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,5 +22,5 @@ flutter:
       ios:
         pluginClass: FluttertoastPlugin
       web:
-        pluginClass: FluttertoastWebPlugin
+        pluginClass: FlutterToastWebPlugin
         fileName: fluttertoast_web.dart
