--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: fluttertoast
 description: Toast Library for Flutter, Easily create toast messages in single line of code
 version: 5.0.1
 homepage: https://github.com/PonnamKarthik/FlutterToast
+issue_tracker: https://github.com/ponnamkarthik/FlutterToast/issues
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -10,17 +11,3 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_web_plugins:
-    sdk: flutter
-
-flutter:
-  plugin:
-    platforms:
-      android:
-        package: io.github.ponnamkarthik.toast.fluttertoast
-        pluginClass: FlutterToastPlugin
-      ios:
-        pluginClass: FluttertoastPlugin
-      web:
-        pluginClass: FluttertoastWebPlugin
-        fileName: fluttertoast_web.dart
