--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,4 +41,5 @@ android {
 dependencies {
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.hjq:toast:8.2"
 }
