--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fluttertoast
 description: Toast Library for Flutter, Easily create toast messages in single line of code
-version: 6.0.1
+version: 7.0.0
 homepage: https://github.com/PonnamKarthik/FlutterToast
 issue_tracker: https://github.com/ponnamkarthik/FlutterToast/issues
 
@@ -11,3 +11,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
+
+flutter:
+  plugin:
+    platforms:
+      android:
+        package: io.github.ponnamkarthik.toast.fluttertoast
+        pluginClass: FluttertoastPlugin
+      ios:
+        pluginClass: FluttertoastPlugin
+      web:
+        pluginClass: FluttertoastWebPlugin
+        fileName: fluttertoast_web.dart
