--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fluttertoast
 description: Toast Library for Flutter, Easily create toast messages in single line of code
-version: 7.0.0
+version: 7.0.1
 homepage: https://github.com/PonnamKarthik/FlutterToast
 issue_tracker: https://github.com/ponnamkarthik/FlutterToast/issues
 
@@ -19,7 +19,7 @@ flutter:
     platforms:
       android:
         package: io.github.ponnamkarthik.toast.fluttertoast
-        pluginClass: FluttertoastPlugin
+        pluginClass: FlutterToastPlugin
       ios:
         pluginClass: FluttertoastPlugin
       web:
