--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,4 +1,4 @@
-name: FlutterToast_example
+name: fluttertoast_example
 description: Demonstrates how to use the FlutterToast plugin.
 
 # The following line prevents the package from being accidentally published to
