--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,20 +22,18 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-
-    - name: Flutter action
-      uses: subosito/flutter-action@v1.4.0
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v2
       with:
-        # The Flutter build release channel
-        channel: stable
-    - name: Enabel Web Support Flutter
-      run: flutter config --enable-web
+        distribution: 'zulu'
+        java-version: '11'
+    - uses: subosito/flutter-action@v2
+      with:
+        channel: 'stable'
+
     - name: Build APK
       run: flutter build apk
     - name: Build For iOS
       run: flutter build ios --release --no-codesign 
-    - name: Flutter to Beta
-      run: flutter channel beta
     - name: flutter build web --release
       run: flutter build web --release
