--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,11 @@ jobs:
       with:
         distribution: 'zulu'
         java-version: '11'
+    steps:
     - uses: subosito/flutter-action@v2
       with:
         channel: 'stable'
-
+    - run: flutter --version
     - name: Build APK
       run: flutter build apk
     - name: Build For iOS
