--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,6 +45,9 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+    if (project.android.hasProperty('namespace')) {
+        namespace 'io.github.ponnamkarthik.toast.fluttertoast'
+    }
 }
 
 dependencies {
