--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,10 +40,11 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
-        minSdkVersion 21
-         if (project.android.hasProperty('namespace')) {
-        namespace 'io.github.ponnamkarthik.toast.fluttertoast'
-    }
+        // from flutter sdk 3.2 minSdkVersion
+        minSdkVersion 19
+        if (project.android.hasProperty('namespace')) {
+            namespace 'io.github.ponnamkarthik.toast.fluttertoast'
+        }
     }
     lintOptions {
         disable 'InvalidPackage'
