--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.0'
+        classpath 'com.android.tools.build:gradle:7.1.3'
+        //noinspection GradleDependency
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -25,31 +26,32 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+
     defaultConfig {
-        // from flutter sdk 3.2 minSdkVersion
         minSdkVersion 19
+        targetSdkVersion 33
         if (project.android.hasProperty('namespace')) {
             namespace 'io.github.ponnamkarthik.toast.fluttertoast'
         }
     }
+
     lintOptions {
         disable 'InvalidPackage'
     }
-   
 }
 
 dependencies {
