--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -32,12 +32,12 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  target 'RunnerTests' do
+    inherit! :search_paths
+  end
 end
 
 post_install do |installer|
-  installer.pods_project.build_configurations.each do |config|
-    config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
-  end
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
   end
