chore: release version 9.0.0 with breaking changes and dependency updates

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,5 +37,5 @@ jobs:
         run: flutter build apk
       - name: Build For iOS
         run: flutter build ios --release --no-codesign
-      - name: flutter build web --release
+      - name: Build For Web
         run: flutter build web --release
